# ChineseChessMuzero

./: config.py  muzero.py  pseudocode.py
game/: chinese_chess.py  game.py
ipynbs/: chess_env_sample.ipynb  chinese_chess_game.ipynb  mcts.ipynb
mcts/: CMakeLists.txt  mcts_cpp.pyx  setup.py  test.py
mcts/mcts_src/: dirichlet.hpp  mcts_search.cpp  mcts_search.hpp
networks/: cartpole_network.py  chinese_chess_network.py  network.py  resnet.py  shared_storage.py
self_play/: mcts.py  self_play.py  utils.py
training/: replay_buffer.py  training.py
